syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Persistence";
option java_multiple_files = true;

package AuthService;

//PROTO OBJECTS

message UserObject {
  int32 id = 1;
  UserData user_data = 2;
}

message UserData {
  string first_name = 1;
  string last_name = 2;
  string password_hash = 3;
  string email = 4;
  oneof role {SubstituteObject sub = 5; EmployerObject emp = 6;}
  string salt = 7;
}

message EmployerObject {
  string title = 1;
  string workplace = 2;
}

message SubstituteObject {
  google.protobuf.Timestamp birth_date = 1;
  string bio = 2;
  string address = 3;
}

message GetUserParams {
  int32 id = 1;
  enum Role {EMPLOYER = 0; SUBSTITUTE = 1;}
  Role role = 2;
}


//MESSAGES

//CREATE
message CreateUserRequest {
  UserData user = 1;
}
message CreateUserResponse {
  UserObject user = 1;
}

//LOGIN
message CreateLoginRequest {
  string email = 1;
  string password_hash = 2;
}
message LoginUserResponse {
  UserObject user = 1;
}

//UPDATE
message UpdateUserRequest {
  UserObject user = 1;
}
message UpdateUserResponse {
  UserObject user = 1;
}

//DELETE
message DeleteUserRequest {
  GetUserParams user = 1;
}

message DeleteUserResponse {
  GetUserParams user = 1;
  bool validation = 2;
}

//GET USER DATA

message GetUserRequest {
  GetUserParams user = 1;
}
message GetUserResponse {
  UserObject user = 1;
}

//

service AuthService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc Login(CreateLoginRequest) returns (LoginUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
}